--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sara Palacios | Portfolfio"
     />
+    <meta property='og:title' content='Sara Palacios | Portfolfio' />
+    <meta property='og:image'
+      content='https://i.ibb.co/MZZrHF3/portfolio-d.png' />
+    <meta property='og:description'
+      content='Sara Palacios | Portfolfio' />
+    <meta property='og:url' content='https://thegoodfilm.netlify.app' />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
