some meta tags created

--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,28 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sara Palacios | Portfolio"
+      content="Portfolio de Sara Palacios. FullStack Web Developer."
     />
     <meta property='og:title' content='Sara Palacios | Portfolio' />
     <meta property='og:image'
       content='https://i.ibb.co/MZZrHF3/portfolio-d.png' />
     <meta property='og:description'
-      content='Sara Palacios | Portfolio' />
-    <meta property='og:url' content='https://thegoodfilm.netlify.app' />
+      content='Portfolio de Sara Palacios. FullStack Web Developer' />
+    <meta property='og:url' content='https://www.sarapalacios.me' />
+    <meta
+    name="description"
+    content="Portfolio de Sara Palacios. FullStack Web Developer"    />
+    <meta name="keywords" content="Sara Palacios, Desarrollo, Programación, FullStack, Front-End, Back-End, Mongo, Express, React, Ironhack, React, Html, Páginas Web, Plantillas Web, Desarrollo a medida, Plataformas online, The Good Film, Funko Hollywood Trivial, All City Cocktails, Agile, iOS, Android, Apps, App, Diseño, Naming, Branding, Project Design, Startups, UX, UI">
+    <meta name="copyright" content="Sara Palacios" />
+    <meta name="author" content="Sara Palacios" />
+    <meta name="robots" content="index"/>
+    <meta name="robots" content="follow"/>
+    <meta http-equiv="expires" content="1800"/>  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Sara Palacios | Portfolio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
