--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Portfolio de Sara Palacios. FullStack Web Developer."
-    />
-    <meta property='og:title' content='Sara Palacios | Portfolio' />
+       <meta property='og:title' content='Sara Palacios | Portfolio' />
     <meta property='og:image'
       content='https://i.ibb.co/MZZrHF3/portfolio-d.png' />
     <meta property='og:description'
-      content='Portfolio de Sara Palacios. FullStack Web Developer' />
+    content="Portfolio de Sara Palacios. FullStack Developer enamorada de la tecnología y orientada a crear soluciones diferentes que realmente sirvan a las personas y aporten valor porque lo que distingue un buen trabajo de un gran trabajo es haber entendido la necesidad y saber responder a las expectativas."/>
     <meta property='og:url' content='https://www.sarapalacios.me' />
-    <meta
-    name="description"
-    content="Portfolio de Sara Palacios. FullStack Web Developer"    />
-    <meta name="keywords" content="Sara Palacios, Desarrollo, Programación, FullStack, Front-End, Back-End, Mongo, Express, React, Ironhack, React, Html, Páginas Web, Plantillas Web, Desarrollo a medida, Plataformas online, The Good Film, Funko Hollywood Trivial, All City Cocktails, Agile, iOS, Android, Apps, App, Diseño, Naming, Branding, Project Design, Startups, UX, UI">
+      <meta name="keywords" content="Sara Palacios, Programación Web, FullStack, Front-End, React, Ironhack">
     <meta name="copyright" content="Sara Palacios" />
     <meta name="author" content="Sara Palacios" />
     <meta name="robots" content="index"/>
