--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio de Sara Palacios. FullStack Developer enamorada de la tecnología y orientada a crear soluciones diferentes que realmente sirvan a las personas y aporten valor porque lo que distingue un buen trabajo de un gran trabajo es haber entendido la necesidad y saber responder a las expectativas."
-    />
+      content="Portfolio de Sara Palacios. MERN FullStack Developer enamorada de la tecnología y orientada a crear soluciones diferentes que no solo sean de utilidad sino que aporten valor."/>
+      />
     <meta property='og:title' content='Sara Palacios | Portfolio' />
     <meta property='og:image'
       content='https://i.ibb.co/MZZrHF3/portfolio-d.png' />
     <meta property='og:description'
-    content="Portfolio de Sara Palacios. FullStack Developer enamorada de la tecnología y orientada a crear soluciones diferentes que realmente sirvan a las personas y aporten valor porque lo que distingue un buen trabajo de un gran trabajo es haber entendido la necesidad y saber responder a las expectativas."/>
+    content="Portfolio de Sara Palacios. MERN FullStack Developer enamorada de la tecnología y orientada a crear soluciones diferentes que no solo sean de utilidad sino que aporten valor."/>
     <meta property='og:url' content='https://www.sarapalacios.me' />
       <meta name="keywords" content="Sara Palacios, Programación Web, FullStack, Front-End, React, Ironhack">
     <meta name="copyright" content="Sara Palacios" />
     <meta name="author" content="Sara Palacios" />
     <meta name="robots" content="index"/>
     <meta name="robots" content="follow"/>
-    <meta http-equiv="expires" content="1800"/>  
+    <meta http-equiv="Cache-Control" content="no-store" /> 
+    <meta http-equiv="Set-Cookie" content="name=data; path=path; expires=Thursday, 01-Jan-2015 00:00:00 GMT">
+
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
