--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="robots" content="index"/>
     <meta name="robots" content="follow"/>
     <meta http-equiv="Cache-Control" content="no-store" /> 
-    <meta http-equiv="Set-Cookie" content="name=data; path=path; expires=Thursday, 01-Jan-2015 00:00:00 GMT">
+    <meta http-equiv="Set-Cookie" content="name=data; path=path; expires=">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
